update23-02-2020
>>> import re
>>> dir(re)
['DEBUG', 'DOTALL', 'I', 'IGNORECASE', 'L', 'LOCALE', 'M', 'MULTILINE', 'S', 'Scanner', 'T', 'TEMPLATE', 'U', 'UNICODE', 'VERBOSE', 'X', '_MAXCACHE', '__all__', '__builtins__', '__doc__', '__file__', '__name__', '__package__', '__version__', '_alphanum', '_cache', '_cache_repl', '_compile', '_compile_repl', '_expand', '_locale', '_pattern_type', '_pickle', '_subx', 'compile', 'copy_reg', 'error', 'escape', 'findall', 'finditer', 'match', 'purge', 'search', 'split', 'sre_compile', 'sre_parse', 'sub', 'subn', 'sys', 'template']
>>> p=re.compile('[a-e]')
>>> print(p.findall("Ahe,said mr.gibenson stark"))
['e', 'a', 'd', 'b', 'e', 'a']
>>> 
KeyboardInterrupt
>>> 
=================================================compile==============================================================================
p=re.compile('[a-e]')
>>> print(p.findall("Ahe,said mr.gibenson stark"))
['e', 'a', 'd', 'b', 'e', 'a']
>>> 
KeyboardInterrupt
>>> p=re.compile('\d+')
>>> print(p)
<_sre.SRE_Pattern object at 0x7f7b93883918>
>>> print(p.findall("Ganesh 22341514 "))
['22341514']
>>> print(p.findall("Ganesh 2234151aseASE4 "))
['2234151', '4']
>>> p=re.compile('\w')
>>> print(p.findall("he said * in some_lang.")
... )
['h', 'e', 's', 'a', 'i', 'd', 'i', 'n', 's', 'o', 'm', 'e', '_', 'l', 'a', 'n', 'g']
>>> 
KeyboardInterrupt
>>> 
import re
>>> m = re.search('(?<=abc)def', 'abcdef')
>>> m.group(0)
'def'l
>>> string="hello 12 hi 68 . howdy 55"
>>> pattern='\d+'
>>> r=re.findall(pattern,string)
>>> print(r)
['12', '68', '55']
>>> r=re.split(pattern,string)
>>> print(r)
['hello ', ' hi ', ' . howdy ', '']
>>> r=re.sub(pattern,replace,string)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'replace' is not definedl
>>> replace=' '
>>> r=re.sub(pattern,replace,string)
>>> print(r)
hello   hi   . howdy  
>>> replace='@@@@'
>>> r=re.sub(pattern,replace,string)
>>> print(r)
hello @@@@ hi @@@@ . howdy @@@@
>>> 
KeyboardInterrupt
==============================================================SUBN================================================================
>>>>>> s="abc 123 \
... de 23 \n f34 6"
>>> pattern='\s+'
>>> replace=''
>>> ner=re.subn(pattern,replace,s)
>>> print(ner)
('abc123de23f346', 5)
>>>>> import re
>>> string = "a was born in 1996 and she is seatles in us he earns 1234$ and the express mad by him was verry high.\n his beloved wife is also working in the same company"
>>> p='\d+'
>>> r=re.findall(p,string)
>>> print(r)
['1996', '1234']
>>> p='\A'
>>> r=re.findall(p,string)
>>> print(r)
['']
>>> p='\Aa'
>>> r=re.findall(p,string)
>>> print(r)
['a']
>>> s='\bood \bood\b bood' 
>>> r=re.findall(p,string)
>>> print(r)
['a']
>>> p='\bood'
>>> r=re.findall(p,string)
>>> print(r)
[]
>>> r=re.findall(s,string)
>>> print(r)
[]
>>> r=re.findall(p,s)
>>> print(r)
['\x08ood', '\x08ood']
>>> s1=s+bad bood
  File "<stdin>", line 1
    s1=s+bad bood
                ^
SyntaxError: invalid syntax
>>> s1=s+'bad bood'
>>> s1
'\x08ood \x08ood\x08 boodbad bood'
>>> s1='bood bood god boodfdskj boood bood'
>>> p="\B"
>>> r=re.findall(p,s1)
>>> print(r)
['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '']

 ==============================================================================================
[1]+  Stopped                 python
aspire1015@aspire1015-ThinkCentre-M71e:~/Documents$ dir(re)
bash: syntax error near unexpected token `re'
aspire1015@aspire1015-ThinkCentre-M71e:~/Documents$ python 
Python 2.7.12 (default, Oct  8 2019, 14:14:10) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> chdir=('/home/aspire1015/Documents')
>>> file=open("update23-02-2020")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IOError: [Errno 2] No such file or directory: 'update23-02-2020'
>>> file=open("update23-02-2020","w+")
>>> class add:
...     def __init__(self,a,b):
...             self.a=a
...             self.b=b
... add(9,10)
  File "<stdin>", line 5
    add(9,10)
      ^
SyntaxError: invalid syntax
>>> c=add(9,10)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'add' is not defined
>>> import re\
... import re
  File "<stdin>", line 2
    import re
         ^
SyntaxError: invalid syntax
>>> import re
>>> string = "a was born in 1996 and she is seatles in us he earns 1234$ and the express mad by him was verry high.\n his beloved wife is also working in the same company"
>>> p='\d+'
>>> r=re.findall(p,string)
>>> print(r)
['1996', '1234']
>>> p='\A'
>>> r=re.findall(p,string)
>>> print(r)
['']
>>> p='\Aa'
>>> r=re.findall(p,string)
>>> print(r)
['a']
>>> s='\bood \bood\b bood' 
>>> r=re.findall(p,string)
>>> print(r)
['a']
>>> p='\bood'
>>> r=re.findall(p,string)
>>> print(r)
[]
>>> r=re.findall(s,string)
>>> print(r)
[]
>>> r=re.findall(p,s)
>>> print(r)
['\x08ood', '\x08ood']
>>> s1=s+bad bood
  File "<stdin>", line 1
    s1=s+bad bood
                ^
SyntaxError: invalid syntax
>>> s1=s+'bad bood'
>>> s1
'\x08ood \x08ood\x08 boodbad bood'
>>> s1='bood bood god boodfdskj boood bood'
>>> p="\B"
>>> r=re.findall(p,s1)
>>> print(r)
['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '']
>>> 
KeyboardInterrupt
>>> x='\d'
>>> r=re.findall(x,string)
>>> print(r)
['1', '9', '9', '6', '1', '2', '3', '4']
>>> s='twelve:12 Eighty nine:89.'
>>> p='\d+'
>>> r=re.split(p,s)
>>> print(r)
['twelve:', ' Eighty nine:', '.']
>>> r=re.split(p,string)
>>> print(r)
['a was born in ', ' and she is seatles in us he earns ', '$ and the express mad by him was verry high.\n his beloved wife is also working in the same company']
>>> res=re.sub(',','#####',r)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/lib/python2.7/re.py", line 155, in sub
    return _compile(pattern, flags).sub(repl, string, count)
TypeError: expected string or buffer
>>> p=','
>>> res=re.sub(p,'#####',r)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/lib/python2.7/re.py", line 155, in sub
    return _compile(pattern, flags).sub(repl, string, count)
TypeError: expected string or buffer
>>> 
KeyboardInterrupt
>>> string = "a was born in 1996 and she is seatles in us he earns 1234$ and the express mad by him was verry high.\n his beloved wife is also working in the same company"
>>> p=['\d']
>>> r=re.findall(p,string)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/lib/python2.7/re.py", line 181, in findall
    return _compile(pattern, flags).findall(string)
  File "/usr/lib/python2.7/re.py", line 237, in _compile
    p, loc = _cache[cachekey]
TypeError: unhashable type: 'list'
>>> r=re.findall(string,p)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/lib/python2.7/re.py", line 181, in findall
    return _compile(pattern, flags).findall(string)
TypeError: expected string or buffer
>>> import re
>>> string = "a was born in 1996 and she is seatles in us he earns 1234$ and the express mad by him was verry high.\n his beloved wife is also working in the same company"
>>> p='\d'
>>> p='\d+'
>>> r=re.findall(p,string)
>>> print(r)
['1996', '1234']
>>> p='\n'
>>> r=re.split(p,string)
>>> print(r)
['a was born in 1996 and she is seatles in us he earns 1234$ and the express mad by him was verry high.', ' his beloved wife is also working in the same company']
>>> p='\d+'
>>> r=re.sub(p,"###',string)
  File "<stdin>", line 1
    r=re.sub(p,"###',string)
                           ^
SyntaxError: EOL while scanning string literal
>>> r='####'
>>> r=re.sub(p,r,string)
>>> print(r)
a was born in #### and she is seatles in us he earns ####$ and the express mad by him was verry high.
 his beloved wife is also working in the same company
>>> print(r)
a was born in #### and she is seatles in us he earns ####$ and the express mad by him was verry high.
 his beloved wife is also working in the same company
>>> p="\Aa"
>>> r="vishnu"
>>> r=re.sub(p,r,string)
>>> print(r)
vishnu was born in 1996 and she is seatles in us he earns 1234$ and the express mad by him was verry high.
 his beloved wife is also working in the same company
>>> p=[^W..e$]
  File "<stdin>", line 1
    p=[^W..e$]
       ^
SyntaxError: invalid syntax
>>> p='[^W..e$]'
>>> r="Priyanka"
>>> r=re.sub(p,r,string)
>>> print(r)


